// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aligner component renders a center aligned single child by default 1`] = `
<styled.div
  gutter={null}
  stretch={false}
>
  <div>
    Centered
  </div>
</styled.div>
`;

exports[`Aligner component renders a flex values on multiple children when passed a valid ratio prop 1`] = `
<styled.div
  gutter={null}
  stretch={false}
>
  <AlignerItem
    alignSelf={null}
    flex="3"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="7"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
</styled.div>
`;

exports[`Aligner component renders align-self on children when passed a valid align-children prop 1`] = `
<styled.div
  gutter={null}
  stretch={false}
>
  <AlignerItem
    alignSelf="top"
    flex="1"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf="center"
    flex="1"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf="bottom"
    flex="1"
  >
    <div>
      Child 3
    </div>
  </AlignerItem>
</styled.div>
`;

exports[`Aligner component renders children with a large gutter 1`] = `
<styled.div
  gutter={null}
  gutters="lg"
  stretch={false}
>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 3
    </div>
  </AlignerItem>
</styled.div>
`;

exports[`Aligner component renders children with a medium gutter 1`] = `
<styled.div
  gutter={null}
  gutters="md"
  stretch={false}
>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 3
    </div>
  </AlignerItem>
</styled.div>
`;

exports[`Aligner component renders children with a small gutter 1`] = `
<styled.div
  gutter={null}
  gutters="sm"
  stretch={false}
>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 3
    </div>
  </AlignerItem>
</styled.div>
`;

exports[`Aligner component renders no flex values on children when passed a invalid ratio prop 1`] = `
<styled.div
  gutter={null}
  stretch={false}
>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
</styled.div>
`;

exports[`Aligner component renders stretch when passed the stretch prop 1`] = `
.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      Child 1
    </div>
  </div>
  <div
    className="c1"
  >
    <div>
      Child 2
    </div>
  </div>
</div>
`;

exports[`Aligner component still renders align-self on children when passed an align-children prop with more values than children 1`] = `
<styled.div
  gutter={null}
  stretch={false}
>
  <AlignerItem
    alignSelf="top"
    flex="1"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf="center"
    flex="1"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf="bottom"
    flex="1"
  >
    <div>
      Child 3
    </div>
  </AlignerItem>
</styled.div>
`;

exports[`Aligner component still renders no align-self on children when passed an align-children prop with less values than children 1`] = `
<styled.div
  gutter={null}
  stretch={false}
>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 1
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 2
    </div>
  </AlignerItem>
  <AlignerItem
    alignSelf={null}
    flex="1"
  >
    <div>
      Child 3
    </div>
  </AlignerItem>
</styled.div>
`;
